# csci218-group-project

./: .gitignore  README.md  app.py  app_clean.py  app_twohanded.py  app_twohandedv2.py  conversation.md  dataset_information.py  detection.py  gesture_data_0.csv  gesture_data_1.csv  gesture_data_2.csv  gesture_data_3.csv  gesture_data_4.csv  gesture_data_5.csv  gesture_data_6.csv  gesture_data_7.csv  gesture_data_8.csv  gesture_data_9.csv  gesture_data_a.csv  gesture_data_b.csv  gesture_data_c.csv  gesture_data_d.csv  gesture_data_e.csv  gesture_data_f.csv  gesture_data_g.csv  gesture_data_h.csv  gesture_data_i.csv  gesture_data_j.csv  gesture_data_k.csv  gesture_data_l.csv  gesture_data_m.csv  gesture_data_n.csv  gesture_data_o.csv  gesture_data_p.csv  gesture_data_q.csv  gesture_data_r.csv  gesture_data_s.csv  gesture_data_t.csv  gesture_data_u.csv  (+29 more)
data/dynamic/: J.csv  J.h5  Test.h5  Z.csv  Z.h5  [clear].h5  [submit].h5
data/static/: A.h5  B.h5  C.h5  Clear.h5  D.h5  Delete.h5  E.h5  F.h5  G.h5  H.h5  I.h5  K.h5  L.h5  M.h5  N.h5  O.h5  Q.h5  R.h5  S.h5  T.h5  U.h5  V.h5  W.h5  X.h5  Y.h5
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.keras  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv  keypoint_testing_label.csv
models/: dynamic_rnn.keras  static_cnn.keras
utils/: collect_data.py  collect_data_image.py  cvfpscalc.py  dataset_information.py  max_camera_fps.py  plot_dataset.py
