[tool.poetry]
name = "hand-gesture-recognition-mediapipe"
version = "0.1.0"
description = ""
authors = ["DepressedClown101 <nicholastsang300999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
numpy = "<2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
