[tool.poetry]
name = "csci218-group-project"
version = "0.1.0"
description = ""
authors = ["DepressedClown101 <nicholastsang300999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.15"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
